# Defillama-mcp

./: APISpec.json  QUICKSTART.md  README.md  claude_desktop_config_example.json  defillama_mcp_server.py  pyproject.toml  requirements.txt  setup.py  test_server.py
